testsuite/tests/parser/should_fail/pfail005.alan
hello() : proc
  (x = 3);
{

}
