testsuite/tests/parser/should_fail/pfail005.stderr
pfail005.alan:2:3: Error: Parse error on input `('
	Expected function or variable declaration

